--- a/main.css
+++ b/main.css
@@ -9,7 +9,6 @@
 
 body {
   padding-top: 1rem;
-  padding-bottom: 200px;
 }
 
 .top-header {
@@ -476,4 +475,234 @@ main {
   flex-shrink: 0;
   background: url('./public/images/fifth-sm1.png');
   background-size: cover;
+}
+
+footer {
+  margin-top: 60px;
+  height: 50rem;
+  background: #0A0A0A;
+  color: white;
+}
+
+footer>.container1 {
+  height: 30rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.container1 .logo {
+  width: 6rem;
+  height: 2rem;
+  flex-shrink: 0;
+  margin-bottom: 20px;
+}
+
+.container1>.text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-family: Roboto;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 0.005rem;
+}
+
+.bullet-text {
+  font-family: Oswald;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 2rem;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  border: 1px red;
+}
+
+.below-border {
+  width: 10rem;
+  height: 1.5px;
+  background: #666;
+  margin-bottom: 15px;
+}
+
+.quick-link>ul {
+  list-style: none;
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 0.005rem;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.popular-post .icon {
+  display: flex;
+  width: 1.25rem;
+  height: 1.25rem;
+  padding: 0.15625rem 0.26044rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.popular-post .name {
+  color: #838383;
+  font-family: Roboto;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+  letter-spacing: 0.00219rem;
+}
+
+.popular-post .text {
+  color: #fff;
+  font-family: Oswald;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.375rem;
+  text-transform: uppercase;
+}
+
+.post-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+
+.most-read .icon {
+  display: flex;
+  width: 1.25rem;
+  height: 1.25rem;
+  padding: 0.15625rem 0.26044rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.most-read .name {
+  color: #838383;
+  font-family: Roboto;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+  letter-spacing: 0.00219rem;
+}
+
+.most-read .text {
+  color: #fff;
+  font-family: Oswald;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.375rem;
+  text-transform: uppercase;
+}
+
+.full-screen-border {
+  width: 80%;
+  margin: auto;
+  height: 1.5px;
+  background: #666;
+}
+
+.container2 {
+  margin-top: 40px;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.subscribe-text>p:nth-child(1) {
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2.375rem;
+  letter-spacing: 0.01rem;
+}
+
+.subscribe-text>p:nth-child(2) {
+  font-family: Roboto;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 0.005rem;
+}
+
+.subscribe-input {
+  display: flex;
+  align-items: center;
+}
+
+.subscribe-input input {
+  width: 31.6875rem;
+  height: 3.5rem;
+  flex-shrink: 0;
+  border: 1.5px solid #666;
+  background: rgba(217, 217, 217, 0.12);
+  color: #838383;
+  font-family: Oswald;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 0.005rem;
+  padding-left: 20px;
+  outline: none;
+}
+
+.subscribe-input button {
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 0.005rem;
+  width: 8.875rem;
+  height: 3.5rem;
+  flex-shrink: 0;
+  background: #047FFA;
+  outline: none;
+  border: none;
+}
+
+.container3 {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Oswald;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+}
+
+.container3 span {
+  color: #047ffa;
+  font-family: Oswald;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+}
+
+.container3 .social-logos>img {
+  border-radius: 100%;
+  padding: 5px;
 }
