--- a/main.css
+++ b/main.css
@@ -453,7 +453,7 @@ main {
 }
 
 .fifth {
-  margin-top: 80px;
+  margin-top: 40px;
 }
 
 .fifth>div {
@@ -475,6 +475,378 @@ main {
   flex-shrink: 0;
   background: url('./public/images/fifth-sm1.png');
   background-size: cover;
+}
+
+.title-text-2 {
+  margin-top: 80px;
+  margin-bottom: 31px;
+}
+
+.fifth-img {
+  width: 681px;
+  flex-shrink: 0;
+}
+
+.fifth-img-details {
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
+}
+
+.fifth-img-details .img1 {
+  padding: 2.5px 4.167px;
+}
+
+.fifth-img-details p {
+  color: #838383;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.035px;
+}
+
+.fifth-img-details div {
+  width: 1px;
+  height: 20px;
+  border: 1px solid #838383;
+  margin: 0 16px;
+}
+
+.fifth-title {
+  color: #0A0A0A;
+  font-family: Oswald;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  text-transform: uppercase;
+  width: 429px;
+  margin-top: 6px;
+}
+
+.fifth-description {
+  color: #838383;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  width: 540px;
+  margin-top: 14px;
+}
+
+.fifth-button {
+  color: #838383;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.016px;
+  background-color: transparent;
+  border: none;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fifth-button-arrow {
+  margin-left: 8px;
+}
+
+.fifth-second-section {
+  display: flex;
+  gap: 20px;
+}
+
+.fifth-second-section .img2 {
+  width: 302px;
+}
+
+.fifth-second-section-time {
+  display: flex;
+  align-items: center;
+}
+
+.fifth-second-section-time .img1 {
+  width: 20px;
+  height: 20px;
+}
+
+.fifth-second-section-time p {
+  color: #838383;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  margin-left: 8px;
+  letter-spacing: 0.035px;
+}
+
+.fifth-second-section-title {
+  color: #0A0A0A;
+  font-family: Oswald;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+  margin-top: 8px;
+}
+
+.fifth-second-section-description {
+  color: #838383;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 10px;
+}
+
+.fifth-second-section-main {
+  display: flex;
+  flex-direction: column;
+}
+
+.sixth {
+  gap: 50px;
+  display: flex;
+}
+
+.sixth-text1 {
+  color: #0A0A0A;
+  font-family: Oswald;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 46px;
+  text-transform: uppercase;
+  margin-top: 80px;
+  margin-bottom: 40px;
+}
+
+.sixth-img1 {
+  width: 980px;
+}
+
+#sixth-title {
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.sixth-w-change {
+  width: 800px;
+}
+
+.sixth-border {
+  margin: 32px 0;
+  width: 870px;
+  border: 1px solid #ccc;
+}
+
+.sixth-flex1 {
+  display: flex;
+  gap: 32px;
+  margin-bottom: 32px;
+}
+
+.sixth-img2 {
+  width: 419px;
+}
+
+.sixth-w-change2 {
+  width: 400px;
+}
+
+#sixth-title2 {
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.sixth-flex2 {
+  display: flex;
+  margin-top: 56px;
+  gap: 8px;
+}
+
+.sixth-btn {
+  color: #838383;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.08px;
+  padding: 6px 14px;
+  border: 1px solid #838383;
+  background-color: transparent;
+  border-radius: 0;
+}
+
+.sixth-btn2 {
+  color: #fff;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.08px;
+  padding: 6px 14px;
+  border: 1px solid #047FFA;
+  background: #047FFA;
+  border-radius: 0;
+}
+
+.sixth-second {
+  width: 472.63px;
+  background: #F4F4F4;
+  padding: 16px;
+  margin-top: calc(176px - 16px);
+  /* height: 2030px; */
+  height: auto;
+}
+
+.sixth-text2 {
+  color: #0A0A0A;
+  font-family: Oswald;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  /* 116.667% */
+  text-transform: uppercase;
+}
+
+.sixth-img3 {
+  width: 440.63px;
+  margin-top: 24px;
+}
+
+#sixth-title3 {
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: -.4rem;
+}
+
+.sixth-w-change3 {
+  width: 400px;
+}
+
+#sixth-border2 {
+  width: 440.63px;
+  border: 1px solid #666;
+}
+
+.sixth-flex3 {
+  display: flex;
+  gap: 14px;
+  margin-bottom: 24px;
+}
+
+.sixth-img4 {
+  width: 150px;
+}
+
+.sixth-w-change4 {
+  width: 290.63px;
+}
+
+.sixth-div1 {
+  padding: 10px 16px 0px 16px;
+  position: relative;
+  background: rgb(15, 81, 166);
+  background: linear-gradient(197deg, rgba(15, 81, 166, 1) 0%, rgba(38, 51, 149, 1) 35%, rgba(103, 16, 164, 1) 100%);
+  height: 330px;
+}
+
+.sixth-text3 {
+  color: #FFF;
+  font-family: Oswald;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 46px;
+  /* 143.75% */
+  letter-spacing: 0.08px;
+}
+
+.sixth-text4 {
+  color: #D9D9D9;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  margin-top: 4px;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.08px;
+}
+
+.sixth-btn3 {
+  color: #FFF;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.016px;
+  padding: 14px 20px;
+  background-color: transparent;
+  border: 1px solid #FFF;
+  margin-top: 24px;
+  border-radius: 0;
+}
+
+
+.sixth-div2-svg1 {
+  fill: linear-gradient(180deg, #575EF6 0%, rgba(13, 153, 255, 0.70) 100%);
+  left: 10rem;
+  bottom: 0;
+  position: absolute;
+}
+
+.sixth-div2-svg2 {
+  fill: #FFF;
+  left: 8rem;
+  bottom: 0;
+  position: absolute;
+}
+
+.sixth-div2-svg3 {
+  fill: linear-gradient(180deg, #575EF6 0%, rgba(13, 153, 255, 0.70) 100%);
+  left: 6rem;
+  bottom: 0;
+  position: absolute;
+}
+
+.sixth-text5 {
+  color: #0A0A0A;
+  font-family: Oswald;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  /* 116.667% */
+  text-transform: uppercase;
+  margin-top: 39px;
+  margin-bottom: 24px;
+}
+
+.sixth-flex4 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sixth-img5 {
+  width: 146.87px;
 }
 
 footer {
